# EnneAI

./: Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py  test.py
ai/: completions.py  data.py  extractor.py  utils.py  vector_db.py
bot/: config.py  database.py  fsm.py  keyboards.py
bot/handlers/: admin.py  base.py
data/: classifier.json  group_prompt.txt  session.json
data/books/socionics/: eie.txt  iee.txt  iei.txt  ile.txt  ili.txt  lse.txt  see.txt  sei.txt  sle.txt  sli.txt
data/ennea/: E1.json  E2.json  E3.json  E4.json  E5.json  E6.json  E7.json  E8.json  E9.json  prompt.txt
data/ennea/dynamic/: Характер и невроз.txt  Эннеаграмма 1.txt  Эннеаграмма 2.txt  Эннеаграмма 3.txt  Эннеаграмма 4.txt  Эннеаграмма 5.txt  Эннеаграмма 6.txt  Эннеаграмма 7.txt  Эннеаграмма 8.txt  Эннеаграмма 9.txt
data/ennea/static/: Иррациональные идеи.txt  Триады.txt  Фиксации.txt
data/files/: ennea_short.json  psychosophy_short.json  socio_short.json
data/ichazo/: prompt.txt
data/ichazo/dynamic/: ichazo_enneagrams_of_fixations.txt  points.txt
data/ichazo/static/: points.txt
data/jung/: prompt.txt
data/jung/dynamic/: Психологические типы (кратко).txt  Психологические типы.txt
data/jung/static/: Типы.txt
data/psychosophy/: prompt.txt
data/psychosophy/dynamic/: Синтаксис любви.txt
data/psychosophy/static/: Воля.txt  Второй аспект.txt  Логика.txt  Первый аспект.txt  Третий аспект.txt  (+3 more)
data/socionics/: prompt.txt
utils/: adverts.py  api_key.py  file_reader.py  key_rotation.py  loader.py  logger.py
(+12 files in other folders)
