[project]
name = "enneai"
version = "2.1"
description = "Naranjo 2.1 dependencies"
authors = [
    {name = "Gl0wdy"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "aiogram (>=3.25.0,<4.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "qdrant-client (>=1.17.0,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "g4f (>=7.2.5,<8.0.0)",
    "sentence-transformers (>=5.2.3,<6.0.0)",
    "pypdf (>=6.7.4,<7.0.0)",
    "ebooklib (>=0.20,<0.21)",
    "docx (>=0.2.4,<0.3.0)",
    "bs4 (>=0.0.2,<0.0.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false